Added file for running many experiments

--- a/quadsim/sample.ipynb
+++ b/quadsim/sample.ipynb
@@ -11,6 +11,7 @@
     "import numpy as np\r\n",
     "import matplotlib.pyplot as plt\r\n",
     "import matplotlib.ticker as ticker\r\n",
+    "plt.rcdefaults()\r\n",
     "import torch\r\n",
     "# from tqdm import tqdm\r\n",
     "\r\n",
@@ -56,23 +57,54 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "np.random.seed(115) # Does this work when np is loaded separately in packages?\r\n",
-    "# c = controller.MetaAdaptBiconvex(dim_a=100, dim_A=100, eta_a_base=0.01, eta_A_base=0.01)\r\n",
+    "eta_a = 0.005\r\n",
+    "\r\n",
+    "eta_A_convex = 0.0005\r\n",
+    "eta_A_biconvex = 0.0002\r\n",
+    "eta_A_deep = 0.05\r\n",
+    "\r\n",
+    "dim_a = 50\r\n",
+    "dim_A = 100\r\n",
+    "layer_sizes = (75, 150)\r\n",
+    "\r\n",
+    "feature_freq = 0.25\r\n",
+    "\r\n",
+    "c = controller.MetaAdaptBaseline(eta_a_base=eta_a, dim_a=dim_a, feature_freq=feature_freq)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "np.random.seed(117) # Does this work when np is loaded separately in packages?\r\n",
+    "# c = controller.MetaAdaptBiconvex(dim_a=100, dim_A=100, eta_a_base=0.005, eta_A_base=0.002)\r\n",
     "# c= controller.MetaAdaptBiconvex(dim_a = 50, dim_A=50, eta_A_base=0.001, eta_a_base=0.001)\r\n",
     "# c = controller.MetaAdaptConvex()\r\n",
-    "c = controller.MetaAdaptDeep(eta_A_base=0.01, eta_a_base=0.01)\r\n",
+    "# c = controller.MetaAdaptDeep(eta_A_base=0.01, eta_a_base=0.01)\r\n",
     "# c = controller.MetaAdaptBaseline()\r\n",
     "# c = controller.Baseline()\r\n",
     "\r\n",
     "Vwind = np.array((3., 0., 0.))\r\n",
     "Vwind_cov = 1.0\r\n",
     "\r\n",
-    "q = quadsim.QuadrotorWithSideForce(Vwind=Vwind, Vwind_cov=Vwind_cov, wind_constraint='hard', Vwind_gust=1.0)# Quadrotor\r\n",
+    "q_kwargs = {\r\n",
+    "    'Vwind' : 0.,                       # mean wind speed\r\n",
+    "    'wind_model': 'iid-uniform',                # {'iid', 'random-walk'}\r\n",
+    "    'Vwind_cov' : 3.0,                  # how quickly the wind changes\r\n",
+    "    # 'wind_constraint' : 'hard',         # 'hard' wind constraint limits wind speed to be within Vwind_gust of the mean speed\r\n",
+    "    'Vwind_gust' : 5.0,                # for hard wind constrant, wind speed is in the range Vwind +/- Vwind_gust\r\n",
+    "    'wind_update_period' : 2.0,         # seconds between wind speed changes\r\n",
+    "    't_stop' : 30.,\r\n",
+    "}\r\n",
+    "q = quadsim.QuadrotorWithSideForce(**q_kwargs, )\r\n",
+    "# q = quadsim.QuadrotorWithSideForce(Vwind=Vwind, Vwind_cov=Vwind_cov, wind_constraint='hard', Vwind_gust=1.0)# Quadrotor\r\n",
     "# q = quadsim.Quadrotor() # Quadrotor\r\n",
-    "q.params['t_stop'] = 8.\r\n",
+    "# q.params['t_stop'] = 20.\r\n",
     "\r\n",
     "\r\n",
-    "T = 4.\r\n",
+    "T = 20.\r\n",
     "# t = trajectory.fig8(T=T, dir1=(0., 0., 2.*np.sqrt(2.)), dir2=(1./np.sqrt(2.), 1./np.sqrt(2.), 0.))\r\n",
     "# t = trajectory.fig8(T=T, dir1=(0.75, 0., 0.), dir2=(0, 0., 0.4))\r\n",
     "t = trajectory.hover(np.array((0., 0., 0.)))\r\n",
@@ -121,6 +153,28 @@
     "scrolled": true,
     "tags": []
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "\r\n",
+    "# importlib.reload(quadrotoranimation)\r\n",
+    "# a = quadrotoranimation.draw_frames(data, fig=plt.figure(figsize=(10,10)))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "fig = plt.figure()\r\n",
+    "ax = fig.gca(projection='3d')\r\n",
+    "plt.quiver([0], [0], [0], [1], [1], [1], normalize=True)\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
